--- a/content/bitcoin/post.mdx
+++ b/content/bitcoin/post.mdx
@@ -1,1 +1,336 @@
-xp
+---
+title: Bitcoin - ni nini na jinsi inavyo fanya kazi 
+
+image: images/ideas.jpg # place in images folder, in same directory
+
+imageAttribution: https://www.vecteezy.com/free-vector/light # if attribution needed, put link to source
+
+date: 2022-12-12 # Date written, OR date edited
+
+category: Bitcoin
+
+trending: true #leave trending, topPick, and popular as false. The maintainers typically decide this :)
+
+topPick: false
+
+popular: false
+---
+
+
+
+Kama kichwa cha habari kinavyo jielezea makala haya lengo laka ni kutambulisha kwako juu ya tekinologia ya **fetha za kidigitali** ijulikanayo kama **Bitcoin** tukiangaliya history yake najinsi ilivyo badili ulimwengu wa uchumi na wala siyo kushawishi au kufundisha juu ya uwekezaji kwenye tekinologia hii.
+
+Mambo ambayo tuta ya nzungumzia 
+
+[Nini maana ya fedha za kidigital](#p1)
+
+
+[Bitcoin ni nini](#p2)
+
+[Nini kinacho fanya Bitcoin kuwa na thamani?](#p3)
+
+[Jinsi Bitcoin zinavyo pimwa](#p4)
+
+[Jinsi Bitcoin zinavyo fanya kazi](#p5)
+
+[Je shughuli za BTC zinaweza kufuatiliwa?](#p6)
+
+[Shughuli na funguo za faragha](#p7)
+
+[Jinsi gani na weza kupata Bitcoin?](#p8)
+
+[Kuchimba Bitcoin](#p9)
+
+[Bitcoin halving](#p10)
+
+[Uchimbaji wa Bitcoin kwenye bwawa](#p11)
+
+[Masoko ya fetha za kidigitali](#p12)
+
+[Bitcoin forks ni nini?](#p13)
+
+[Nani anaye fanya uwamuzi kuhusu forks?](#p14)
+
+[Wapi naweza kuhifadhi Bitcoin?](#p15)
+
+[Biyashara na Bitcoin](#p16)
+
+[Jinsi Bitcoin inavyo tumika](#p17)
+
+[HITIMISHO](#p18)
+
+## Nini maana ya fedha za kidigitali<a name="p1"></a>
+
+Fedha za kidigital **"Cryptocurrency"** au **"crypto"** ni aina ya fedha ambazo zina patikana **kidigitali** tu. 
+Huwezi kuishika kama unavyo fanya kwenye hizi pesa za asili za makaratasi au sarafu ambazo kitaalamu tuna ziita **"Fiat"**.
+
+Fedha hizi za kidigital zina umarufu mkubwa hasa kwa sababu shughuli zake hupewa ulinzi unao tumia **"cryptography"**,
+Ambayo ni mbinu ya kulinda mawasiliano.
+
+Na hakuna chombo chochote kile ambacho kina mamlaka juu yake, mtandao wake ume **gatuliwa**. 
+Kuna maelifu ya fedha za kidigital lakini kwa uchache kabisa baathi ambazo ni maarufu zaidi ni 
+**Bitcoin**, **Ethereum**, **Litecoin** pamoja na **Ripple**.
+
+## Bitcoin ni nini?<a name="p2"></a>
+
+Bitcoin (BTC) ilianza kung'aa kuanzia mwaka 2009 baada ya utambulisho wake kutoka kwa mtu au kundi la watu ambao wali jitambulisha kama **Satoshi Nakamoto**. Uhalisia haufahamiki nani hasa ali endeleza Bitcoin mpaka naandika makala haya December 2022
+
+
+Bitcoin imetambulishwa kwetu mwaka mmoja baadaye, baada ya matatizo makubwa ya kiuchumi ya mwaka 2008 yaliyo sababishwa hasa na mifumo ya asili ya ki benki iliyo mibovu, huenda **Satoshi Nakamoto** alikuwa ana tatuwa changamoto hiyo. Imeundwa ili itumike kila siku kwenye ubadilishanaji wa fedha.
+
+Tangia utambulisho wake mwaka 2009 Bitcoin ndiyo fetha ya kidigitali iliyo kubwa kulikozote kwa mtaji wa soko  (market cap),  tafsiri yake ni kwambwa ujumla wa thamini la soko ni mkubwa kuliko wa pesa nyoyote ile ya kidigitali
+
+Bitcoin imekua na nyakati tamu na chungu kwa vipindi tofauti tofauti mfn mwaka 2017 wafanya biyashara na wawekezaji walishuhudia uongezakaji wa bei kwa asilimia 1,000% jambo lakuzingatia ni kwamba bitcoin bado ni tete kwa sababu mbali mbali ambazo ni nje ya makala haya. 
+Pamoja na hayo inatosha kusema kwamba kila siku Bitcoin inajiuongezea umaarufu na kuwa salama zaidi.
+
+Msingi wa tekinologia hii umekuwa ukiwahamasisha wa endelezaji kuibuka na mifumo mingine ya fetha ambayo imekua ikitoa ushindani kwa Bitcoin na imekua maarufu kama **sarafu mbadala** "alternative coins, au altcoins". 
+
+## Nini kinacho fanya Bitcoin kuwa na thamani?<a name="p3"></a>
+
+Kuna sababu nyingi zinazo ifanya Bitcoin ionekana yenye thamani. 
+Kwa kawaida fetha zote zilizofanikiwa ziwe za kidigitali au la lazima ziwe na vigezo hivi
+**Uhaba**, **mgawanyiko**, **matumizi**, **uhamishaji**, **kutokuwa na uwezo wa kuwa bandia**, 
+Bitcoin inakithi vigezo hivi na ndiyo maana inaonekana yenye thamani.
+
+## Jinsi Bitcoin zinavyo pimwa<a name="p4"></a>
+Bitcoin inagawanyika kwa sehemu nane za desilimali, 
+inamanisha unaweza kununua kiasi cha sehemu. 
+Kiyasi kidogo kabisa kinajulikana kama **Satoshi**, 
+likiwa jina la mgunduzi wa Bitcoin. 
+**Satoshi** moja ni sawa na **0.00000001 BTC**. 
+## Jinsi Bitcoin zinavyo fanya kazi<a name="p5"></a>
+
+BTC ni fetha za kidigitali zinafanya kazi moja kwa moja na tekinologia inayo julikana kama **blockchain**. 
+Blockchain ni daftari la umma ambalo lina rekodi shughuli zote za bitcoin zilizo thibitishwa.
+ 
+Fikiria blockchain kama kile kidaftari cha kidigitali chapasi kutoka kwenye mfumo wa asili wa kibenki ambapo kiasi cha saliyo la akaunti yako na shuhuli hu fatiliwa na ku rekodiwa
+
+Utofauti mkubwa ni kwambwa shughuli zilizo rekodiwa kwenye Bitcoin blockchain zinapatikana kwa yoyote yule kwenye mtandao 
+
+Uwepo wa daftari hili la uma unachangia uwazi wa hali ya juu kwani kila mmjo kwenye mtandao anaweza kuona shughuli za BTC kama vile adresi ya inapo toka na inako kwenda
+
+## Je shughuli za BTC zinaweza kufuatiliwa?<a name="p6"></a>
+Wakati ambapo taarifa kuhusu shughuli na watu wanao husika ni faragha na zimelindwa 
+umma bado unaweza kuona kwamba kunamtu kwenye mtandao anatumu kiasi cha fedha kwa mtu mwingine. 
+
+Ili kutounganisha shughuli na mmiliki maalumu, model ya faragha ya Bitcoin inatumia **peya ya funguo**. Hatahivyo, kwa kuwa shughuli nyingi huingia mtandaoni kuunganisha ni kitu kisicho epukika na inaweza kuonyeshe shughuli zimefanywa na kumilikiwa na miliki huyo huyo.
+
+**Kurasa nyeupe** za Bitcoin zina soma 
+"Hatari ni pale mmiliki wa funguo atakapo fichuliwa, kuunganisha kunaweza kufichua taarifa zingine za shughuli za mmiliki huyo huyo" kutokana na hili tunaweza kusema kwamba Bitcoin inatumia jina bandia "**pseudonymous**" nawala siyo kwamba jina "**halijulikani**" "**anonymous**".
+
+
+
+Jambo jingine lakufahamu nikwamba mtandao huu ume gatwiliwa **"decentralized"**. 
+Tofauti na mabenki na taasisi zingine za kifedha za asili ambazo hufwatiliwa na huthibitiwa na baneki kuu na mashirika mengine ya serekali. 
+Mtandao wa Bitcoin hufanya kazi kwa kujitegemea . Tafsiri yake ni kwamba hufanya kazi kwa kutumia shughuli za rika-kwa- rika "**peer-to-peer (P2P) transactions**".
+
+## Shughuli na funguo za faragha<a name="p7"></a>
+Shughuli za Bitcoin zinafafanuliwa kama "usafirishaji wa thamani baina ya **wallets** za fedha "**cypto**".” 
+Unapo toa fedha kutoka kwenye ATM au kwenye app ya kwenye simu, unathibitisha utoaji wa fedha kwa kuweka **PIN** yako. Ni sawa na BTC lakini badala ya kuulinzwa PIN utaulizwa uweke **fuguo zako za faragha**.
+
+**PIN** kama ilivyo kwenye akauti yako ya benki, **fuguo ya faragha** ni taarifa ya siri ambayo hapaswi kufahamu mtu yoyote yule zaidi yako. Inaruhusu ufikiwaji wa wallet yako ya Bitcoin na kuruhusu fedha zako kutumika, kwa hiyo kuwa makini wasiyo husika kuto pata hiyo funguo. 
+**Funguo za faragha** hua zina hifadhiwa kwenye computer yako au kwenye server iliyoko mbali hii hutegemea na aina gani ya wallet unatumia.
+
+## Jinsi gani na weza kupata Bitcoin?<a name="p8"></a>
+Kuna njia nyingi zakuweza kupata sehemu yako ya kwanza ya Bitcoin 
+uchaguzi uliyo nao ni pamoja na **kuchimba**, **kununua kwenye maeneo ya masoko ya fedha za kidigital kwenye mtandao wa internet** na zaidi. 
+Lakini hebu tuzame na kuangaza kwenye njia hizi mbili. 
+
+## Kuchimba Bitcoin<a name="p9"></a>
+Kama ilivyo kwenye kipisi cha chuma chenye thamani ya juu kweli kweli kijulikanacho kama **dhahabu**, 
+basi na Bitcoin hupatikana kwa **kuchimba** kwa kimombo tunasema **"mining"**. 
+
+Hatahivyo uchimbaji wa Bitcoin ni wa kidigital zaidi hakuna vifaa vya kazi zinto wala kemikali 
+wachimbaji wa bitcoin hutumia **computer nzenye nguvu**, **software maalumu**, 
+**Internet inayo aminika na imara na umeme wa hali ya juu**. 
+
+Uchimbaji wa Bitcoin unachukuliwa kama moja ya michakato ya ghali yakupata Bitcoin. 
+Na hutumia algorithms changamano ambazo hutatuliwa na wachimbaji. 
+Mahesebu ni magumu na hayawezi kutatuliwa kwa akili ya kawaida, 
+na hivyo kufanya mchakato kuwa wa ghali na wakutatanisha. 
+
+Kutokana na hilli wachimbaji hulipwa kutokana na kila kitalu wanacho tatua 
+au kuthibitisha kwenye blockchain, lakini ushindani umekua 
+ukizidi hasa pale watuwengi wanapo kuwa wanaingia kwenye uchimbaji.
+
+
+
+## Bitcoin halving<a name="p10"></a>
+Uchimbaji wa bitcoin ni aina flani ya mashindano
+
+Mwazilishi wa Bitcoin ali programu zawadi ya kitalu igawanywe nusu kwa nusu 
+kwa vipindi vya mara kwa mara 
+
+
+
+Zawadi ya kuchimba kitalu hupungua hadi nusu kwa kila vitalu 210,000 vinavyo ongenzwa. 
+Hadi naandika makala haya inachukua miaka minne kuongeze idadi hiyo ya vitalu na tukio hili huwa linajulikana kama Bitcoin halving.
+Tukio lakwanza likitoke 2012
+
+Tukio lilo tokea mwaka 2020 lilikuwa la tatu tukio jingine linategemewa mwaka 2024
+.
+Kinatharia ni kwamba usambazaji wa Bitcoins ukipugua, ongezeko la uhitaji wa bitcoin hauto badilika, na hivyo kusukuma bei juu.
+
+Tukiangali halving za hivi karibuni tunaona ongezeko la thamani "bullishly" mwaka mzima mara baada ya hili tukio kutokea. Safari hii ikipanda zaidi ya 559% 
+
+
+
+>>>Kama kulivyo na kiasi kidogo cha thahabu arithini, na kiasi kidogi cha Bitcoin kilicho kuwepo ni million 2 bilashaka ndiyo jina la thahabu ya kidigitali lipo ibuka. 
+
+## Uchimbaji wa Bitcoin kwenye bwawa<a name="p11"></a>
+
+Wakati wakuchimba Bitcoin, kuna uwezekano pia wakuchimba kwenye makundi. 
+Na hii hujulikana kama bwawa la wachimba Bitcoin. 
+Bwawa la wachimba Bitcoin ni pale kundi la wachimbaji wanapo fanya kazi kwa pamoja ili kuongeza nafasi yakupata na kuchimba vitalu.
+Wachimbaji wanapo unganisha nguvu zao kwenye mabwawa huongeza nafasi yakupata vitalu. Malipo yanayo patikana hugawanya kwenye kundi na hii inaweza kutafsiriwa kwamba wale wanao chimba kwenye makundi hupata kipato kidogo kuliko moja moja, lina jalidika.
+
+## Masoko ya fetha za kidigitali<a name="p12"></a>
+
+Kama hutaki kuchovya vidole vyako kwenye dimbwi la uchimbaji Bitcoin kuna maelfu ya masoko ya fedha za kidigitali kwenye mtandao wa internet ambapo unaweza kununua BTC. 
+Mambo yakuzingatia wakati wakutafuta mbadilishaji aliye makini ni pamoja na:
+
+**Usalama wenye uhakika** – ni vizuri uka angali jukwaa ambalo linakubali uthibitisho wa two-factor (2FA).
+
+**Mipaka ya kigeographia**  – Mataifa mengine na mamlaka zao bado zinasumbuka kwenye matumizi ya Bitcoin vilivyo tafuta jukwaa litakalo kuwezesha kutumia mali zako za kidigital kwa ukamilifu 
+
+**Wepesi wakugeuza mali kuwa biyashara** – Angalia jukwaa lakubadilishia BTC zako kwa pesa zako za fiat unazo hitaji bila kutoa jasho.
+
+**Malipo ya shughuli**– Ada ya kununulia, kuuza, kuhifadhi au kutoa BTC hutofautiana kati ya mbadilishaji mmoja na mwingine kwa hiyo nijukumu lako kulinganisha nani mwenye ada kidogo.
+
+**Sifa na Uhalisia wa jukwaa** – Hakikisha unafanya utafiti juu ya uhalali wa uwepo wa hilo kampuni kwa kuthibitisha unaweza kutafuta kwenye mtandao wa internt barua pepe na namba za simu ambazo zinaweza kukusaidi kwenye utafiti wako juu ya uhalali wa hiyo kampuni na jukwa lake. 
+
+Hii inaweza ikaonekana kama kazi ya ziada lakini ni mambo muhimu ambayo utahitaji kuyanzingatia kama utahitaji kuingia kwenye soko la fedha za kidigital **"crypto"**.
+
+## Bitcoin forks ni nini?<a name="p13"></a>
+Kwa lugha rahisi, Bitcoin forks ni pale itifaki ya blockchain itakapo badilika na kuboreshwa na hutokea pale kiwango cha wachimbaji wa kutosha watakapo pitisha kanuni mpya za mtandao. 
+Kuna aina mbili ya forks: **hard forks** na **soft forks**.
+
+**Hard forks**: ni pale kanuni za awali za blockchain na kanuni mpya za blockchain zinapo gawanyika kutokea kwenye moja wapo. 
+Kunapokuwa na **hard fork**, toleo la awali la blockchain huachwa nyuma, na shughuli zote zinafanywa na blockchain iliyo boreshwa. 
+Na haziwezi kusomwa na toleo la awali la blockchain. Kwa kutumia **hard fork** wachimbaji wana uwamuzi wa kuchaguwa wa tumie toleo lipi, 
+kwani kwa sasa kutakuwa na matoleo mawili ya fedha za kidigitali.
+
+**Soft forks** Ni ubadilishaji wa `itifaki` na siyo ubadilishaji wa `bithaa` utofauti mkubwa kati ya **soft forks** na **hard forks** 
+ni kwamba **soft fork** inaweza kurudi nyuma tafsiri yake itifaki za toleo jipya zinaweza kutambuliwa na node za zamani kwenye mfumo. 
+Ni sisitize tu kwamba hii inamanisha hakuna bidhaa mpya inayo tengenenzwa hapa. 
+
+
+Mfano wa **hard forks** nipamoja na: 
+
+**Bitcoin Cash (BCH)**: 
+
+*Kwa msingi kabisa katika hali ya kawaida hizi folks huwa zinatokea kutokana na mitazamo tofauti.*
+
+Bitcoin ilipo zidi kujipatia umaarufu, "technologia ya blockchaini imejengwa kwenye mtandao ambao uko tararibu huo ndiyo muundo wake inje ya boksi".
+Matokeo yake mfumo mzima ukawa siyo wa kutegemea kwani shughuli zilishuhudia kuchelewa na ada zake zikizidi kuwa juu. 
+
+Kutokana na changamoto hii ya mtandao kukosa kasi kwa kiwango hicho ilibidi Bitcoin ije na suluhisho na ndiyo **folks** zilipo azishwa, tukiyo la August 1, 2017 ambalo lilikua likisabisha ucheweleshaji wa shughuli ilibidi kubadili kitalu kutoka kwenye kile cha asili cha 1-megabyte nakuongeza hadi 8-megabyte nahapa ndipo ilipo patikana **fork** ya kwanza ambayo ni maarufu kama **Bitcoin Cash (BCH):**
+Nahii ilifanya Bitcoin iendelee kukuwa hatakama watumiaji ambao wana ingiliana na mfumo huu wanaongezeka. 
+
+>>>Kitalu kikubwa kinaweza kushikilia data nyingi zaidi na kuongeza kasi kwenye mchakato mzima wa kununua na kuuza hasa pale watu wengi wanapo ingia kwenye mfumo.
+
+
+
+
+**Bitcoin Gold (BTG)**: hii ni **hard fork** ambayo ili tengenezwa October 2017 kwa lengo la kurudishia kazi za hapo nyuma za uchimbaji. Uchimbaji wa BTG tafsiri yake ni utumiaji wa **graphics processing units (GPUs)** badala ya kutumia hardware na vifaa maalumu marufu kama "**application-specific integrated circuits" (ASICs)**. Kwa msingi, hasa tafsiri yake ni kwamba wachimbaji wanaweza kuchimba BTG wakiwa nyumbani bila kuhitaji kuwa na vfaa vya gharama. 
+
+**LiteCoin (LTC)**: Fork hii inatumia algorithm tufauti na ile ya asili "original" ya Bitcoin algorithm, SHA-256. Shughuli za LTC inasemekana hua zina thibitishwa mapema na zina ada ndogo kulinganisha na zile za Bitcoin asili. 
+
+## Nani anaye fanya uwamuzi kuhusu forks?<a name="p14"></a>
+
+Kuna makundi matatu ya watu ambayo huwa yana fanya maamuzi yaliyo mengi ambayo yana husiana na forks:
+
+**Waendelezaji "Developers"**:Kundi hili hutengeneza naku sasisha code. Kama wewe ni developer, unaweza kupendekeza mabadiliko ambayo ma developers wengine wanaweza kuya hakiki. Ma developers "waendelezaji" hurekibisha changamoto "bugs" zinazo jitokeza kwenye mfumo na kuongeza mabadiliko na vipengele vingine.
+
+**Wachimbaji. "Miners"**: Kundi hili huongeza vitalu vipvya kwenye blockchain na huendasha mfumo wa code. 
+Wachimbaji huhakikisha ulizi wa kwenye blockchain na huku mfumo ukiendelea kufanyakazi .
+
+**Watumiaji wa node zima** "Full node users": Watumiaji hawa hutuma, kupokea na kuhalalisha vitalu kwenye blockchain. 
+Huzingatiwa kama sehemu muhimu ya mfumo ili uweze kufaya kazi.
+
+## Wapi naweza kuhifadhi Bitcoin?<a name="p15"></a>
+
+BTC ni fedha za kidigitali. Haina uwepo wa asili. Kuwepo kwake kwa kipekee sana kunategemea matumizi ya tekinogologia hakuna note za BTC zakukunja au coin zakuweka kwenye pochi au wallet yako. 
+Badala yake hutumia hifadhi ijulikanayo kama **Bitcoin Wallet**.
+
+Bitcoin wallet au digital wallet niyakipeke na iliyo salama kama sehemu ya hifadhi. 
+Nayo hutumia blockchain, tekinologia janja nyuma ya mtandao wa fedha za kidigitali. Jambo la kuvutia nikwamba unawezo kufanya mambo mengi sana pamoja nayo. Kama unatumia BTC wallet, unaweza kupokea BTC kutoka kwenye wallets zingine, kutuma fedha au kufanya malipo nakuangalia salio lako kwa mdaa huo huo.
+
+Kuna aina nyingi za wallet za fedha za kidigitali "cryptocurrency", lakini nyingi hudondokea kati ya makundi haya:
+
+**Hot wallets** – Hifadhi inapatikana kupitia mtandao wa internet. Hii ni pamoja na web na mobile wallets. 
+
+**Cold wallets** – Kifaa asili kisicho hitaji internet. Mfano hardware wallets, desktop wallets, na wallets za karatasi. 
+
+Kuna mitandao mingine ya rika-kwa-rika "peer-to-peer" sokoni kwenye mtandao wa internet ambapo unaweza kusajili bure kabisa account yako ya Bitcoin wallet na kuanza kuitumia maramoja baada yaku itengeneza. 
+
+
+
+Shuhuli za Bitcoin, kwa upande mwingine, hutumia saini za kidigitali. Ni "cryptographic" na “ushahidi wa mahesabu” kwamba BTC zinatoka kwa mmiliki wa wallet na siyo kutoko popote pale na mwingine yoyote yule. Saini ya kidigitali pia ina kuruhusu wewe kufahamu kama BTC zimetumwa kwa mtu mwingine.
+
+Wakati ambapo kila mmoja kwenye mtandao anaweza kuona kwamba saini yako ni sawa na shughuli flani ya Bitcoin, hakuna njia yoyote ile kwa yoyote yule kufahamu fuguo yako ya faragha. Bitcoin inatumia changamano la hali ya juu kwenye michakato na vipengele kufanya kuwa ngumu kufikia muafaka. Kwa hiyo usiwaze kuhusu kuibiwa kwa pesa zako endapo tu ni wewe pekeyako mwenye uthibiti wa fuguo ya faragha. 
+
+## Biyashara na Bitcoin<a name="p16"></a> 
+
+Kama ilivyo kwenye fedha zingine, Bitcoin zina weza kushikiliwa na kuunzwa kwenye fedha zingine au bithaa.
+
+Hatahivyo kuna mikakati maarufu ambayo wenye shauku na fedha za kidigital huwa wanatumia, na kama ilivyo desturi ya mkakati wowote ule huwa na faida na hasara, 
+za kufanya biyashara ya Bitcoin na fedha za kidigital kwa ujumla. 
+
+Tutazama na kuangalia baathi ya mikakati ambayo wafanya biyashara wa Bitcoin hutumia kupata kitu katika ushikiliaji wao wa fedha za kidigital. 
+
+
+
+Soko huwa lina hama kwenye mzunguko, huku likibadilika kwa kupanda na kushuka kutokana na sababu mbali mbali, 
+kama mfanya biyashara tuseme unataka kunufaika na hivi vipindi vifupi na virefu vya mabadiliko au `bembeya` **"swings"** kwenye bei ya mali. 
+Kwenye kisa hiki tunazumgumzia mabadiliko yanayotokea kwa kipindi cha siku chache au wiki chache. Chochote kile kifupi kina julikana kama **biyashara ya siku** tutaizungumzia badaye kidogo chochote kile kirefu ni mkakati ambao hujulikana kama `kushikilia` **"HODLing"** ambayo hasa kwa ufafanuzi siyo biyashara.
+
+### Biyashara ya bembeya "swing" ni nini?
+
+Hasa kwavile mabadiliko hayo yabiyashara `"swings"` ni mkakati wa mdaa mfupi wafanyabiyashara 
+huchanganya mbinu ya **uchambuzi wa kiufundi** naile ya **msingi wa uchambuzi** ili kuweza kupata kipimo kilicho bora cha kibiyashara kuweza kuingia na kutoka. 
+Ufunguo ni kuweza kuchanganya uchambuzi wakiufundi na viashiria vyake kuweza kutambua na kutabiri harakati za ingizo la biyashara na kutoka
+
+### Biyashara ya siku ni nini?
+
+Biyashara ya siku ni mkakati wa kipindi kifupi ambayo inahusisha kufanya biyashara kwa wingi kwa siku kwa kutumia kwa ukamilifu mabadiliko ya bei ya mali `"swings"` kwa siku. 
+Wafanya biyashara kwa kawaida hununua mali kwa bei flani na husubiri thamani ya hiyo mali iongezeke mara moja na kama thamani ya hiyo mali ikiongezeka wanaiuza kwa bei ya juu, 
+na hivyo mfanyabiyara hupata faida. Lengo nikutengeneza faida ndogo ndogo nyingi kwenye biyashara
+
+Mbinu hii ni hatari na ina hitaji Uangalizi wa karibu kwani soko husogea kwa kasi
+
+### Ushikiliaji "HODL" ni nini?
+
+`HODLIng` au **Hodl** Ni mkakati wa mda mrefu ambao wawekazeji hutumia pale soko linapokuwa chini. 
+Hatakama soko likiwa chini, wa wekezaji wanao **shikilia** **"HODL"** hawauzi fedha zao za kidigital wakiwa na matumaini kwamba bei zitapanda tena kwa kipindi cha mda mrefu. 
+Hii nitofauti na biyashara ya siku ambayo ni mkakati wa uwekezaji wa mdaa mfupi.
+
+Wale wanao shikilia bitcoin au fedha za kidigital kwa mdaa mrefu lengo lao sio hasa kupata faida bali nikuboresha uwezo wa kubadilika na kufanya fedha zafiat kuwa thaifu kulinganisha na fethadha za kidigital.
+
+## Jinsi Bitcoin inavyo tumika<a name="p17"></a>
+Mwanzoni, Bitcoin ilikuwa inajulikana zaidi kwa umahiri wa kufanya moja kwa moja malipo yaliyo rahisi na bila mipaka. Lakini ilipo zidi kufahamika, watu kutoka maeneo mbali mbali duniani na makampuni mbali mbali wameanza kugundua matumizi mbali mbali ya hali ya juu. Ambayo ni pamoja na:
+
+
+Malipo ya manunuzi ya kila siku
+
+Michango ya hisani na mipango ya waanzalishi 
+
+Kuhifadhi mali 
+
+Uhamishaji wa fedha ndani na nnje ya nnchi 
+
+
+Zawadi kwa marafiki na familiya 
+
+Lango la biyashara ya mtandaoni 
+
+
+Njia ya kutengeneza hela
+
+*Unaweza kufanya mambo yote haya kwa kubofya bofya kidogo tu kwenye wallet yako ya Bitcoin wakati wowote ule na mahali popote pale.*
+
+
+
+## HITIMISHO<a name="p18"></a>
+
+Niseme tu kwamba uwanda wa fedha zakidigital hususani Bitcoin ni mpana sana kunamengi yakujifunza, kwa ukurasa mmoja nimekupa twaswira. Matumaimi yangu kwamba chapisho hili limekupa mwanga wa nini ni Bitcoin na njia mbali mbali ambazo unaweza kujihusisha na Bitcoin pale itakapo kua ni muafaka.
