--- a/content/bitcoin/post.mdx
+++ b/content/bitcoin/post.mdx
@@ -1,7 +1,7 @@
 ---
 title: Bitcoin - ni nini na jinsi inavyo fanya kazi 
 
-image: images/ideas.jpg # place in images folder, in same directory
+image: images/bitcoin.jpg # place in images folder, in same directory
 
 imageAttribution: https://www.vecteezy.com/free-vector/light # if attribution needed, put link to source
 
