--- a/content/python/django-model-ya-mtumiaji/post.mdx
+++ b/content/python/django-model-ya-mtumiaji/post.mdx
@@ -1,6 +1,6 @@
 ---
 title: Django - Jinsi ya kutengeneza Model yako ya watumiaji
-image: images/biology.jpg # place in /images folder, in same directory
+image: images/user_model.jpg # place in /images folder, in same directory
 imageAttribution: https://www.vecteezy.com/free-vector/biology # if attribution needed, put link to source
 date: 2022-05-22 # Date written, OR date edited
 category: Python
