--- a/content/ethereum-ni-nini/post.mdx
+++ b/content/ethereum-ni-nini/post.mdx
@@ -1,7 +1,7 @@
 ---
 title: Ethereum ni nini na jinsi inyo fanya kazi
 
-image: images/bitcoin.jpg # place in images folder, in same directory
+image: images/ethereum.jpg # place in images folder, in same directory
 
 imageAttribution: https://www.vecteezy.com/free-vector/light # if attribution needed, put link to source
 
