--- a/content/ripple-ni-nini/post.mdx
+++ b/content/ripple-ni-nini/post.mdx
@@ -1,1 +1,147 @@
-test
+---
+title: Ripple - ni nini na jinsi inavyo fanya kazi 
+
+image: images/ripple.jpg # place in images folder, in same directory
+
+imageAttribution: https://www.vecteezy.com/free-vector/light # if attribution needed, put link to source
+
+date: 2023-01-14 # Date written, OR date edited
+
+category: Ripple
+
+trending: true #leave trending, topPick, and popular as false. The maintainers typically decide this :)
+
+topPick: false
+
+popular: false
+---
+
+
+
+
+  
+### Je mtandao wa **Ripple** unaweza kuwa na ushindani mkubwa thidi ya **SWIFT**? 
+
+
+Huku **SWIFT** ikichukua saa (au hata siku) kufuta muamala, 
+**Ripple** husafisha ndani ya sekunde tano na inaweza kushughulikia upitishaji sawa na mtandao wa Visa.
+
+
+
+Moja ya miundombinu ya sasa ya kuhamisha malipo kuvuka mipaka ni mtandao wa **SWIFT** (Society for Worldwide Interbank Financial Telecommunication). 
+Ingawa, mara nyingi, miundombinu ya **SWIFT** ni ya polepole na inaweza kuhusisha uhamisho kati ya benki kadhaa za kati (kila moja ikichukua ada ya muamala). 
+Udukuzi wa hivi majuzi wa mtandao wa **SWIFT** [udukuzi wa dola milioni 81], pia, umeonyesha kuwa kunauhitaji wa kukabiliana na kuimarisha usalama wa wigo wa miundombinu yake.
+
+Sasa huyu kijana mpya mjini **Ripple** ni nani na ana faya vipi kazi, na changamoto gani
+Ana tatua ambazo **SWIFT** kwa namna moja au nyingine haija tatua makala haya lengo lake
+Ni kujibu hilo swali kwa kuangalia **Ripple** ni nini na inafanya vipi kazi.
+
+## Ripple ni nini?
+
+**Ripple** ni mtandao na itifaki ya malipo ya kidigitali inayo tokana na teknologia ya **blockchain** ikiwa na fedha zake za kidigitali, **XRP**. 
+Mchakato mkubwa wa **Ripple** ni kwenye kukamilisha malipo, kubadilisha mali na mfumo wa utumaji pesa, 
+kama kwenye mfumo wa **SWIFT** kwa ajili ya kutuma fedha kwa usalama kimataifa, ambao hutumiwa na mabenki pamoja na watu wakati au vyombo vingine vya fedha vinavyo jihusisha na fedha tofauti tofauti.
+
+
+Token kuu ya fedha za kidigitali inayo tumika ni ile yenye alama ya **XRP**. 
+**Ripple** ni jina la kampuni na mtandao, na **XRP** ni token ya fedha za kidigitali. 
+Kusudi la **XRP** niku hudumu kama utaratibu wakati kunapokuwa na mabadilishano ya fedha za aina mbili au mitandao kama aina ya safu yamakazi ya muda. 
+
+### Msingi Kuhusu Ripple 
+
+Ripple imetolewa mwaka 2012 na ilianzishwa na Chris Larsen na Jed McCaleb.
+
+Ripple ni mtandao wa malipo wa kidijitali unao tumia teknologia ya blockchain na itifaki yenye fedha zake za kidigitali, XRP.
+
+Badala ya kutumia uchimbaji wa blockchain, Ripple hutumia utaratibu wa makubaliano, kupitia kundi la seva zinazomilikiwa na benki, ili kuthibitisha miamala.
+
+Shughuli za Ripple hutumia nishati kidogo kuliko bitcoin, huthibitishwa kwa sekunde, 
+na gharama kidogo sana, ambapo miamala ya bitcoin hutumia nishati zaidi, 
+inachukua muda mrefu kuthibitisha, na inajumuisha gharama kubwa zaidi za ununuzi.
+
+Ripple (**XRP**) ni kati ya tokeni zenye thamani zaidi za blockchain kwa mtaji wa soko.
+
+Mfumo wa malipo wa Ripple unakusudiwa kutumiwa hasa na benki lakini wawekezaji binafsi wanaweza kukisia bei ya XRP.
+
+## Ndani ya Ripple 
+*ielewe Ripple*
+
+Ripple inafanya kazi katika mazingira ambayo chazo chake cha code kipo wazi "open-source" na jukwaa la rika-kwa-rika "peer-to-peer" lilo gatuliwa inaruhusu uhamishaji wa fedha zozete na hali yoyote, iwe ni yen, dollar, euro au fedha za kidigitali kama vile litecoin au bitcoin. 
+Ripple ni mtandao wa malipo wa kimataifa na unahusisha mabenki makubwa na taasisi za kifedha kama miongoni mwa wateja wake. 
+XRP inatumika kwenye bithaa zake ili kurahisisha ubadilishaji kati ya fedha ya aina moja na nyingine
+
+### Ripple Kama Mtandao Hawala Wa Kidigitali 
+
+Ilikuelewa jinsi mfumo unavyo fanya kazi, zingatia muundo wa uhamishaji fedha pale ambapo pande zote mbili upande wa mwisho wa miamala yao wanatumia mtu wa tatu waliyo mpendelea kwa ajili ya kupokea fedha. 
+Kwa wepesi. Ufanyaji kazi wa huduma za Ripple ni kama hawala wa kidigitali. **Hawala** `ni njia isiyo rasmi ya kuhamisha fedha, hususani kuvusha mipakani. Bila kua na fedha za kiasili zozote zile zakuhamisha`.
+
+Tusema Lusekelo anataka kutuma Tsh10,000
+Kwa Masawe ambaye anaishi mji mwingine. Lusekelo atatoa hizo fedha zinazo takiwa zimfikie Masawe kupitia wakala wake Bupe. 
+Lusekelo pia ata toa nenosiri "password" ambayo Masawe atatakiwa kujibu kwa usahihi ili kuweze kupokea hizo fedha kwenye mji wake. 
+Bupe atamtaarifu wakala wa Masawe, Manka, kuhusiana na taarifa za muamala kwa undani ikijumlisha vitu kama vile 
+risiti, kiasi cha fedha kinacho takiwa kulipwa, na nenosiri. 
+Kama Masawe akijibu nenosiri lilo sahihi kwa Manka, Manka atampatia Tsh 10,000.
+
+Hata hivyo, fedha zinatoka kwenye account ya Manka inamanisha Bupe anadaiwa na Manka Tsh 10,000 
+(ambayo italipwa badaye) Manka anaweza kuweka taarifa kwenye kitabu cha journal au madeni 
+kwa kuorothesha madeni yote ambayo Bupe atatakiwa kulipa katika kipindi watakacho kuwa wamekubaliana.
+
+Au wa hesabiane miamala ambayo italeta usawa kwenye deni. 
+Mfn kama Manka angekuwa ni wakala wa Shayo na Shayo anahitaji kutuma kiasi cha 
+Tsh10,000 kwa Mwaki ambaye wakala wake ni Bupe 
+hii itaweka sawa kwa kufuta lile deni la Tsh 10, 000 
+kwa Manka kwa sababu Mwaki atalipwa kutoka kwenye account ya Bupe. 
+
+Ingawaji mtandao wa **Ripple** ni changamano kuliko mfano huu, mfano huu bado unaonyesha 
+kwa juu juu jinsi ambanyo mtandao wa **Ripple** unavyo fanya kazi. 
+Kutoka kwenye huo mfano hapo juu, 
+unaweza kuona kwamba uwaminifu unahitajika ilikuweza 
+kufanya miamala uaminifu kati ya Lusekelo na Bupe, Bupe na Manka, na Masawe na Manka.
+
+## Fedha za kidigitali za Ripple XRP 
+
+Fedha za kidigitali za **Ripple**, zinakuwa kama daraja kwa fedha zingine. Haibagui kati ya fedha zozote zile za fiat/na zakidigital, 
+na hii hurahisisha ubadilishaji wa fedha zozote zile kwa nyingine. 
+Fedha yoyote ile kwenye mfumo wa ikolojia una lango lake -- mfn **CADBluzelle (Canadian dollars — CAD)**, **BTCbitstamp (BTC)**, na **USDsnapswap (US $)**.
+
+Kama Masawe anahitaji bitcoins kama malipo kutoka kwa huduma inayo tolewa na Lusekelo. 
+Lusekelo hatakiwi kuwa ana miliki kiasi chochote kile cha bitcoin. Ana weza kutuma malipo kupitia mlango wake na Masawe akapokea bitcoin kwenye mlango wake. 
+Mlango moja hauhitajiki kuanzisha kiukamilifu muamala; Milango mingi inaweza kutumika, nakuunda mnyororo wa uaminifu kwa watumiaji wote.
+
+
+Ushikiliaji wa fedha kwenye lango ni hatari
+Kwani wahusika wa muamala wanaweza kukiuka wajibu wao wa kimkataba. "**counterparty risk**" kitu ambacho kipo kwenye mabenki ya asili. Kama lango haliheshimu dhima yake, mtumiaji anaweza kupoteza thamani ya fedha ambazo zimeshikiliwa na lango. 
+Watumiaji ambao hawana imani na lango wanaweza kuhamisha shughuli zao kwenye lango jingine wanalo liamini ambayo nayo inahusika na "**wasioaminika**"
+Kwa njia hii **IOU** itatekelezwa kupitia lango linaloaminika, au lango lililoidhinishwa na kustahili mikopo.
+Hatari ya ukiukaji wajibu wao wa kimkataba. "**counterparty risk**" haipo kwenye bitcoins (na altcoins nyingi) kwa sababu bitcoin ya mtumiaji sio IOU au dhima ya mtumiaji mwingine.
+
+Wa wekezaji na watumiaji wa Ripple inapaswa kufahamu kuwa ni lengo la 
+Kesi ya Tume (SEC) iliyoanza Desemba 2020. Shirika hilo linaishtaki kampuni hiyo na watendaji wake wakuu wawili kwa madai ya kutoa na kuuza dola bilioni 1.3 kwa dhamana zisizo na leseni kwa njia ya sarafu ya crypto ya XRP. SEC inasisitiza kuwa XRP inahesabiwa kama usalama na, kwa hivyo, SEC inaruhusiwa kuidhibiti.
+Ripple anasema sivyo ilivyo, kwani XRP badala yake ni njia ya kubadilishana, 
+sarafu pepe inayotumika kufanya miamala ya kimataifa na ya ndani. 
+Kesi ya SEC dhidi ya Ripple inaweza kumalizika mnamo 2023
+
+## Jinsi Ripple Inavyofanya Kazi
+
+Mtandao wa Ripple hauendeshwi na mfumo wa uthibitisho wa kazi (PoW) kama bitcoin au mfumo wa uthibitisho wa hisa (PoS) kama vile Nxt. 
+Badala yake, shughuli za malipo hutegemea itifaki ya makubaliano ili kuthibitisha salio la akaunti na miamala kwenye mfumo. 
+Makubaliano yanafanya kazi ili kuboresha uadilifu wa mfumo kwa kuzuia matumizi ya mara mbili.
+
+Ripple hufuatilia **IOU** zote katika sarafu fulani kwa mtumiaji au lango lolote. 
+Salio la **IOU** na mtiririko wa miamala unaotokea kati ya pochi/wallet za Ripple zinapatikana hadharani kwenye leja ya makubaliano ya Ripple. 
+ingawa historia ya miamala ya fedha inarekodiwa hadharani na kupatikana kwenye blockchain, data haizijaunganishwa na kitambulisho au akaunti ya mtu au biashara yoyote. 
+Hata hivyo, rekodi ya umma ya shughuli zote (yaani, blockchain) hufanya maelezo kuathiriwa na hatua za kufuta utambulisho.
+
+Mfumo wa malipo wa **Ripple** unakusudiwa kutumiwa na **benki**, ingawa **wawekezaji binafsi** wanaweza kukisia bei ya **XRP**.
+
+### Mazingatio Maalumu
+
+**Ripple** inaboresha baadhi ya vikwazo vinavyohusishwa na benki za asili. 
+Shughuli za malipo hutatuliwa ndani ya sekunde chache kwenye mtandao wa **Ripple** (ingawa mfumo huu unashughulikia mamilioni ya miamala mara kwa mara). 
+Hii ni tofauti na benki, ambayo inaweza kuchukua siku au wiki kadhaa kukamilisha **hauli ya kielektroniki** "wire transfer". 
+Ada ya kufanya miamala kwenye Ripple pia ni ndogo, na kiwango cha chini cha gharama ya ununuzi kinachohitajika kwa shughuli ya kawaida iliyowekwa ni 0.00001 XRP, 
+ikilinganishwa na ada kubwa zinazotozwa na benki kwa kufanya malipo ya mipakani.
+
+
+
+Kufikia mwishoni mwa Agosti 2022, XRP moja ina thamani ya takriban $33.75, na Ripple ilikuwa sarafu ya saba kwa ukubwa katika fedha za kidigitali ikiwa na soko la zaidi ya $16.6 bilioni.
