--- a/content/ripple-ni-nini/post.mdx
+++ b/content/ripple-ni-nini/post.mdx
@@ -1,7 +1,7 @@
 ---
 title: Ripple - ni nini na jinsi inavyo fanya kazi 
 
-image: images/ripple.jpg # place in images folder, in same directory
+image: images/ripplejpg.jpg # place in images folder, in same directory
 
 imageAttribution: https://www.vecteezy.com/free-vector/light # if attribution needed, put link to source
 
