--- a/content/technology/github/post.mdx
+++ b/content/technology/github/post.mdx
@@ -1,1 +1,13 @@
-v
+---
+title: 3 Best Places to Learn Python Programming for Free
+image: ./images/python.jpg
+# imageAttribution: none needed for this post
+date: 2023-23-09
+category: Github
+trending: false
+topPick: false
+popular: true
+---
+
+This file contains various Markdown snippets that you may use to construct an article. Markdown is very easy to use!
+
