--- a/content/technology/github/post.mdx
+++ b/content/technology/github/post.mdx
@@ -1,6 +1,6 @@
 ---
 title: 3 Best Places to Learn Python Programming for Free
-image: ./images/codespacejpg.jpg
+image: ./images/codespace.jpg
 # imageAttribution: none needed for this post
 date: 2023-23-09
 category: Github
