--- a/content/technology/github/post.mdx
+++ b/content/technology/github/post.mdx
@@ -1,5 +1,5 @@
 ---
-title: Jinsi ya kuandaa mazingira ya kuandika na kuendeleza code github kwakutumia codespace
+title: Jinsi ya kuandaa mazingira ya kuandika na kuendeleza code github kwa kutumia codespace
 image: ./images/codespacejpg.jpg
 # imageAttribution: none needed for this post
 date: 2023-09-23
@@ -9,30 +9,25 @@ topPick: false
 popular: true
 ---
 
-linapokuja swala la huduma ya mazingira ya uendelazaji wa code kwenye mtandao wa internet au niseme mawinguni
-
+Linapokuja swala la huduma ya mazingira ya uendelazaji wa code kwenye mtandao wa internet au niseme mawinguni
 huduma mbili zina nijia kwa haraka github codespace na gitpod 
 
 Github ni mtandao wa kijamii mashuhuri sana kwa waendelezaji code hasa kwa sababu jukwaa hilo
 lili tengenenzwa kwa ajili ya waendelezaji na hivyo kua na huduma kadhaa kwa ajili ya waendelezaji na 
 moja ya huduma ambayo imekua marufu zaidi hata kwa watu wasiyokuwa waendelezaji wa code ni huduma ya kuhifadhi 
-code kwa matoleo na matawi kwenye mti wa hadhina **reposatory**, pamoja na michakato mingine ambayo inaweza kufanyika bada ya kuhifadhi hizo code kwenye hadhina 
+code kwa matoleo na matawi kwenye mti wa hadhina **"reposatory"**, pamoja na michakato mingine ambayo inaweza kufanyika bada ya kuhifadhi hizo code kwenye hadhina 
 kama vile kuchukua hatua flani **git action**.
 
-kwenye makala haya tutakwenda kuangalia huduma ya mazingira ya kuandikia na kuendleza code inayo tolewa na github maarufu kama codespace.
-tutaagalia jinsi ilivyo rahisi kutengeneza CodeSpace na jinsi ya kuifanyia setting ili iendane na mazingira yako. Chanzo cha code kinapatikana hapa
+kwenye makala haya tutakwenda kuangalia huduma ya mazingira ya kuandikia na kuendleza code inayo tolewa na github maarufu kama codespace. Tutaagalia jinsi ilivyo rahisi kutengeneza CodeSpace na jinsi ya kuifanyia setting ili iendane na mazingira yako. Chanzo cha code kinapatikana hapa
 
 CodeSpace Nimazingira ya uendlazaji ambayo yanafanya kazi katika cointainer ambayo mwenyeji wake ni virtual machine ambayo itakuwa imeunganishwa na hadhina yako
 
-tumekua tukitumia macointerna kuendeleza na kusafirisha code ili kutatua changamoto ya code zilikuwa zinafanya kazi kwangu, usanifu wa huduma 
-ndogo ndongo **microseviserve actecture** hauepukiki hasa kwa sababu ya ubora wa ufanyaji kazi wa application ambazo zime jegwa kwa usanifu huu 
-kwenye team kuwa na mazingira yauendelzaji yanayo fuanana setting zake inachagiza kasi ya ufanyaji kazi lakini uwezo wakufanya kazi popote na kwenye kifa choochote 
-kwenye machine ambayo inauwezo mkubwa labda kuliko kifachako na bila malipo ya internet kwenye hiyo machine hiyo inakuwa zaidi ya sababu ya kutumia 
-mazingira haya wakati wa uendelezaji code. Codespace imejengwa mahususi kuweza kuenda
-sambamba na mahitaji ya project yako pamoja na waendelezaji Kwa kutumia mafaili ambayo yamefanyiwa setting maalumu **configaration** pamoja na chanzo cha code
+tumekua tukitumia macointerna kuendeleza na kusafirisha code ili kutatua changamoto ya code zilikuwa zinafanya kazi kwangu, usanifu wa huduma ndogo ndongo **microservice architecture** hauepukiki hasa kwa sababu ya ubora wa ufanyaji kazi wa application ambazo zime jegwa kwa usanifu huu. kwenye team kuwa na mazingira yauendelzaji yanayo fuanana setting zake inachagiza 
+kasi ya ufanyaji kazi lakini uwezo wakufanya kazi popote na kwenye kifa choochote 
+kwenye machine ambayo inauwezo mkubwa labda kuliko kifachako na bila malipo ya internet kwenye hiyo machine hiyo inakuwa zaidi ya sababu ya kutumia mazingira haya wakati wa uendelezaji code. Codespace imejengwa mahususi kuweza kuenda
+sambamba na mahitaji ya project yako pamoja na waendelezaji Kwa kutumia mafaili ambayo yamefanyiwa setting maalumu **configaration** pamoja na chanzo cha code ambazo zitatumika kutengeneza codespace kwa matoleo na ambayo unaweza kuitumia mara kwa mara na setting zake zina fuanana kwa watumiaji wote.
 
-ambazo zitatumika kutengeneza codespace kwa matoleo na ambayo unaweza kuitumia mara kwa mara na setting zake zina fuanana kwa watumiaji wote 
-mtu yoyote yule anaweza kutumia codespace chamsingi uwe tu na accout github 
+Mtu yoyote yule anaweza kutumia codespace chamsingi uwe tu na accout github 
 
 # Jinsi ya kutengeneze codespace
 
