--- a/content/technology/github/post.mdx
+++ b/content/technology/github/post.mdx
@@ -20,12 +20,14 @@ kama vile kuchukua hatua flani **git action**.
 
 kwenye makala haya tutakwenda kuangalia huduma ya mazingira ya kuandikia na kuendleza code inayo tolewa na github maarufu kama codespace. Tutaagalia jinsi ilivyo rahisi kutengeneza CodeSpace na jinsi ya kuifanyia setting ili iendane na mazingira yako. Chanzo cha code kinapatikana hapa
 
-CodeSpace Nimazingira ya uendlazaji ambayo yanafanya kazi katika cointainer ambayo mwenyeji wake ni virtual machine ambayo itakuwa imeunganishwa na hadhina yako
+CodeSpace Nimazingira ya uendlazaji ambayo yanafanya kazi katika cointainer ambayo mwenyeji wake ni virtual machine ambayo itakuwa imeunganishwa na hadhina yako.
 
-tumekua tukitumia macointerna kuendeleza na kusafirisha code ili kutatua changamoto ya code zilikuwa zinafanya kazi kwangu, usanifu wa huduma ndogo ndongo **microservice architecture** hauepukiki hasa kwa sababu ya ubora wa ufanyaji kazi wa application ambazo zime jegwa kwa usanifu huu. kwenye team kuwa na mazingira yauendelzaji yanayo fuanana setting zake inachagiza 
+Tumekua tukitumia macointerna kuendeleza na kusafirisha code ili kutatua changamoto ya code zilikuwa zinafanya kazi kwangu, usanifu wa huduma ndogo ndongo **microservice architecture** hauepukiki hasa kwa sababu ya ubora wa ufanyaji kazi wa application ambazo zime jegwa kwa usanifu huu, kwenye team kuwa na mazingira yauendelzaji yanayo fuanana setting zake inachagiza 
 kasi ya ufanyaji kazi lakini uwezo wakufanya kazi popote na kwenye kifa choochote 
-kwenye machine ambayo inauwezo mkubwa labda kuliko kifachako na bila malipo ya internet kwenye hiyo machine hiyo inakuwa zaidi ya sababu ya kutumia mazingira haya wakati wa uendelezaji code. Codespace imejengwa mahususi kuweza kuenda
-sambamba na mahitaji ya project yako pamoja na waendelezaji Kwa kutumia mafaili ambayo yamefanyiwa setting maalumu **configaration** pamoja na chanzo cha code ambazo zitatumika kutengeneza codespace kwa matoleo na ambayo unaweza kuitumia mara kwa mara na setting zake zina fuanana kwa watumiaji wote.
+kwenye machine ambayo inauwezo mkubwa labda kuliko kifachako na bila malipo ya internet kwenye hiyo machine hiyo inakuwa zaidi ya sababu ya kutumia mazingira haya wakati wa uendelezaji code. 
+
+Codespace imejengwa mahususi kuweza kuenda
+sambamba na mahitaji ya project yako pamoja na waendelezaji Kwa kutumia mafaili ambayo yamefanyiwa setting maalumu **configuration** pamoja na chanzo cha code ambazo zitatumika kutengeneza codespace kwa matoleo na ambayo unaweza kuitumia mara kwa mara na setting zake zina fuanana kwa watumiaji wote.
 
 Mtu yoyote yule anaweza kutumia codespace chamsingi uwe tu na accout github 
 
