--- a/content/technology/github/post.mdx
+++ b/content/technology/github/post.mdx
@@ -33,3 +33,21 @@ Mtu yoyote yule anaweza kutumia codespace chamsingi uwe tu na accout github
 
 # Jinsi ya kutengeneze codespace
 
+ilikutumia codespace itabidi uingie github na account yako kama huna sajili, ukisha ingia github utafanya hivi
+![img](https://i.ibb.co/Ms8Pyrm/github-codespace-rep00.jpg)
+
+Zingatia nimeanza na kutengeneza hadhina "repo" ambayo na taka kuiunganisha na codespace kama tayari unayo repo 
+ambayo unataka kuianganisha na codespace huna haja ya kutengeneza hadhina mpya lakini kama huna endelea kamaifuatavyo
+
+
+
+kwavile tayari ninayo hadhina tuanze mojakwamoja na kutumia codespace, fungua profile yako nauende kwenye kitufe cha codespace kama hivi
+
+kuna template ambazo tungeweza kuanza nazo kutegemea na mazingira yako mimi sitachagua templete yoyote ile kwani templete ambayo nitaanza nayo
+niile ambayo ni chagua lamsingi endapo huta chagua templete yote ile, yayewe inakuja ikiwa imewezesha na node, python, docker hii hasa inatufaa
+kwenye mazingira ya maktaba hii ambapo tunahitaji kutumia docker zaidi. kumbuka unaweza ukatengeneza templete yako na ukashare na
+wengine kwenye soko la github 
+
+>>zingatia kwenye akauti ya bure nje ya boksi unapata masa stini kwa mwezi ambayo ni bure
+na machine unaweza kuchagua ya 4 au 8 mpaka na nachapisha makala haya
+
