--- a/content/technology/github/post.mdx
+++ b/content/technology/github/post.mdx
@@ -34,7 +34,7 @@ Mtu yoyote yule anaweza kutumia codespace chamsingi uwe tu na accout github
 # Jinsi ya kutengeneze codespace
 
 ilikutumia codespace itabidi uingie github na account yako kama huna sajili, ukisha ingia github utafanya hivi
-![img](https://i.ibb.co/BzNBnKZ/codespacejpg.jpg)
+![Stormtroopocat](https://octodex.github.com/images/stormtroopocat.jpg 'The Stormtroopocat')
 
 Zingatia nimeanza na kutengeneza hadhina "repo" ambayo na taka kuiunganisha na codespace kama tayari unayo repo 
 ambayo unataka kuianganisha na codespace huna haja ya kutengeneza hadhina mpya lakini kama huna endelea kamaifuatavyo
